--- a/overall-app/pom.xml
+++ b/overall-app/pom.xml
@@ -43,7 +43,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.pet.king.MyClass</mainClass>
+									<mainClass>main.java.com.pet.king.MyClass</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
