--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -19,7 +19,7 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.3</version>
+					<version>3.5.1</version>
 					<configuration>
 						<compilerArgument>-parameters</compilerArgument>
 						<source>1.8</source>
@@ -42,6 +42,18 @@
 				<artifactId>junit</artifactId>
 				<version>3.8.1</version>
 				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.pet.king</groupId>
+				<artifactId>overall-util</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
