--- a/webapp-stock/WebContent/WEB-INF/web.xml
+++ b/webapp-stock/WebContent/WEB-INF/web.xml
@@ -1,32 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" metadata-complete="false"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-
-	<!-- <servlet> -->
-	<!-- <servlet-name>HomeServlet</servlet-name> -->
-	<!-- <servlet-class>org.pet.servlets.HomeServlet</servlet-class> -->
-	<!-- </servlet> -->
-	<!-- <servlet-mapping> -->
-	<!-- <servlet-name>HomeServlet</servlet-name> -->
-	<!-- <url-pattern>/home2</url-pattern> -->
-	<!-- </servlet-mapping> -->
-
-	<servlet>
-		<servlet-name>aboutJsp</servlet-name>
-		<jsp-file>/Views/about.jsp</jsp-file>
-		<init-param>
-			<param-name>param1</param-name>
-			<param-value>jsp init param from web.xml</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>aboutJsp</servlet-name>
-		<url-pattern>/Views/about.jsp</url-pattern>
-	</servlet-mapping>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" metadata-complete="false" version="3.1">
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>aboutJsp</servlet-name>
+    <jsp-file>/Views/about.jsp</jsp-file>
+    <init-param>
+      <param-name>param1</param-name>
+      <param-value>jsp init param from web.xml</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>aboutJsp</servlet-name>
+    <url-pattern>/Views/about.jsp</url-pattern>
+  </servlet-mapping>
 </web-app>
