--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -12,6 +12,7 @@
 	<modules>
 		<module>overall-util</module>
 		<module>overall-app</module>
+		<module>overall-webapp</module>
 	</modules>
 
 	<build>
@@ -44,6 +45,34 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.1.0</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet.jsp</groupId>
+				<artifactId>jsp-api</artifactId>
+				<version>2.2</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.el</groupId>
+				<artifactId>el-api</artifactId>
+				<version>2.2</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.tomcat</groupId>
+				<artifactId>tomcat-catalina</artifactId>
+				<version>8.0.32</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
@@ -57,6 +86,8 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.4</version>
+				<!-- default scope is compile -->
+				<!-- <scope>compile</scope> -->
 			</dependency>
 
 			<dependency>
