--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -68,12 +68,12 @@
 				<version>1.2</version>
 			</dependency>
 
-			<dependency>
-				<groupId>org.apache.tomcat</groupId>
-				<artifactId>tomcat-catalina</artifactId>
-				<version>8.0.32</version>
-				<scope>provided</scope>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.apache.tomcat</groupId> -->
+<!-- 				<artifactId>tomcat-catalina</artifactId> -->
+<!-- 				<version>8.0.32</version> -->
+<!-- 				<scope>provided</scope> -->
+<!-- 			</dependency> -->
 
 			<dependency>
 				<groupId>junit</groupId>
