--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -62,18 +62,20 @@
 				<scope>provided</scope>
 			</dependency>
 
+			<!-- This one is not included by Tomcat, needs to get deployed. This lets 
+				us use the c:core and other JSTLs and custom tag handlers. -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>jstl</artifactId>
 				<version>1.2</version>
 			</dependency>
 
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.apache.tomcat</groupId> -->
-<!-- 				<artifactId>tomcat-catalina</artifactId> -->
-<!-- 				<version>8.0.32</version> -->
-<!-- 				<scope>provided</scope> -->
-<!-- 			</dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>org.apache.tomcat</groupId> -->
+			<!-- <artifactId>tomcat-catalina</artifactId> -->
+			<!-- <version>8.0.32</version> -->
+			<!-- <scope>provided</scope> -->
+			<!-- </dependency> -->
 
 			<dependency>
 				<groupId>junit</groupId>
