JAYB example with Javadoc generation; java classes generation from sample CustomerOrders.xsd file

--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -93,10 +93,17 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-impl</artifactId>
+				<version>2.2.11</version>
+			</dependency>
+
+			<dependency>
 				<groupId>com.pet.king</groupId>
 				<artifactId>overall-util</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
