--- a/overall-app-container/overall-app/pom.xml
+++ b/overall-app-container/overall-app/pom.xml
@@ -144,6 +144,11 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
