--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -93,6 +93,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.2.6</version>
+			</dependency>
+
+			<dependency>
 				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
 				<version>2.2.11</version>
