--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -99,9 +99,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
+				<groupId>javax.xml</groupId>
 				<artifactId>jaxb-impl</artifactId>
-				<version>2.2.11</version>
+				<version>2.1</version>
 			</dependency>
 
 			<dependency>
