--- a/overall-app-container/overall-webapp/pom.xml
+++ b/overall-app-container/overall-webapp/pom.xml
@@ -46,5 +46,14 @@
 	</dependencies>
 	<build>
 		<finalName>overall-webapp</finalName>
+
+		<!-- Required by Eclipse, with this we can target Servlet 3.1 implementation -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+		</plugins>
 	</build>
 </project>
