--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -92,16 +92,23 @@
 				<!-- <scope>compile</scope> -->
 			</dependency>
 
+			<!-- JAXB -->
 			<dependency>
 				<groupId>javax.xml.bind</groupId>
 				<artifactId>jaxb-api</artifactId>
 				<version>2.2.6</version>
 			</dependency>
-
 			<dependency>
 				<groupId>javax.xml</groupId>
 				<artifactId>jaxb-impl</artifactId>
 				<version>2.1</version>
+			</dependency>
+
+			<!-- Jersey Servlet 3.X implementation -->
+			<dependency>
+				<groupId>org.glassfish.jersey.containers</groupId>
+				<artifactId>jersey-container-servlet</artifactId>
+				<version>2.23</version>
 			</dependency>
 
 			<dependency>
