--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -47,21 +47,18 @@
 				<version>3.1.0</version>
 				<scope>provided</scope>
 			</dependency>
-
 			<dependency>
 				<groupId>javax.servlet.jsp</groupId>
 				<artifactId>jsp-api</artifactId>
 				<version>2.2</version>
 				<scope>provided</scope>
 			</dependency>
-
 			<dependency>
 				<groupId>javax.el</groupId>
 				<artifactId>el-api</artifactId>
 				<version>2.2</version>
 				<scope>provided</scope>
 			</dependency>
-
 			<!-- This one is not included by Tomcat, needs to get deployed. This lets 
 				us use the c:core and other JSTLs and custom tag handlers. -->
 			<dependency>
@@ -70,27 +67,18 @@
 				<version>1.2</version>
 			</dependency>
 
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.1.0.Final</version>
+			</dependency>
+
 			<!-- <dependency> -->
 			<!-- <groupId>org.apache.tomcat</groupId> -->
 			<!-- <artifactId>tomcat-catalina</artifactId> -->
 			<!-- <version>8.0.32</version> -->
 			<!-- <scope>provided</scope> -->
 			<!-- </dependency> -->
-
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>3.8.1</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>3.4</version>
-				<!-- default scope is compile -->
-				<!-- <scope>compile</scope> -->
-			</dependency>
 
 			<!-- JAXB -->
 			<dependency>
@@ -110,6 +98,32 @@
 				<artifactId>jersey-container-servlet</artifactId>
 				<version>2.23</version>
 			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.ext</groupId>
+				<artifactId>jersey-bean-validation</artifactId>
+				<version>2.23</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.media</groupId>
+				<artifactId>jersey-media-json-jackson</artifactId>
+				<version>2.23</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
+				<!-- default scope is compile -->
+				<!-- <scope>compile</scope> -->
+			</dependency>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>3.8.1</version>
+				<scope>test</scope>
+			</dependency>
+
 
 			<dependency>
 				<groupId>com.pet.king</groupId>
