still Jaxrs: new maven module: overall-common; jersey client example in overall-app; overall-webapp jersey server side refactor

--- a/overall-app-container/overall-webapp/pom.xml
+++ b/overall-app-container/overall-webapp/pom.xml
@@ -23,6 +23,17 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.pet.king</groupId>
+			<artifactId>overall-common</artifactId>
+		</dependency>
+
+		<!-- required for overal-webapp's build -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
