--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -13,6 +13,7 @@
 		<module>overall-util</module>
 		<module>overall-app</module>
 		<module>overall-webapp</module>
+		<module>overall-common</module>
 	</modules>
 
 	<build>
@@ -40,6 +41,14 @@
 		the deps, but only the groupId and artifactId -->
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- required for overal-webapp's build -->
+			<dependency>
+				<groupId>javax</groupId>
+				<artifactId>javaee-api</artifactId>
+				<version>7.0</version>
+				<scope>provided</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>javax.servlet</groupId>
@@ -99,6 +108,11 @@
 				<version>2.23</version>
 			</dependency>
 			<dependency>
+				<groupId>org.glassfish.jersey.core</groupId>
+				<artifactId>jersey-client</artifactId>
+				<version>2.23</version>
+			</dependency>
+			<dependency>
 				<groupId>org.glassfish.jersey.ext</groupId>
 				<artifactId>jersey-bean-validation</artifactId>
 				<version>2.23</version>
@@ -128,6 +142,12 @@
 			<dependency>
 				<groupId>com.pet.king</groupId>
 				<artifactId>overall-util</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.pet.king</groupId>
+				<artifactId>overall-common</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
