--- a/overall-app-container/overall-app/pom.xml
+++ b/overall-app-container/overall-app/pom.xml
@@ -166,6 +166,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.pet.king</groupId>
+			<artifactId>overall-common</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
@@ -182,6 +187,10 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
 		</dependency>
 
 	</dependencies>
