--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -124,6 +124,20 @@
 			</dependency>
 
 			<dependency>
+				<groupId>javax.enterprise</groupId>
+				<artifactId>cdi-api</artifactId>
+				<version>1.2</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<!-- JBoss/Weld Refrence Implementation for CDI on a Servlet Container -->
+				<groupId>org.jboss.weld.servlet</groupId>
+				<artifactId>weld-servlet</artifactId>
+				<version>2.3.4.Final</version>
+				<scope>runtime</scope>
+			</dependency>
+
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.4</version>
