--- a/overall-app-container/overall-webapp/pom.xml
+++ b/overall-app-container/overall-webapp/pom.xml
@@ -62,6 +62,18 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-bean-validation</artifactId>
+			<exclusions>
+				<!-- do not include this dependency in the output, Tomcat provides it 
+					This could be excluded in the parent POM to inherit it as well -->
+				<exclusion>
+					<groupId>javax.el</groupId>
+					<artifactId>javax.el-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.glassfish.web</groupId>
+					<artifactId>javax.el</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
