--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -35,6 +35,16 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+
+		</plugins>
 	</build>
 
 	<!-- modules inherit these dependencies though they still need to specify 
