--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -52,7 +52,8 @@
 	<dependencyManagement>
 		<dependencies>
 
-			<!-- required for overal-webapp's build -->
+			<!-- required for overal-webapp's build, Tomcat provides the necessary 
+				part of it -->
 			<dependency>
 				<groupId>javax</groupId>
 				<artifactId>javaee-api</artifactId>
@@ -86,6 +87,7 @@
 				<version>1.2</version>
 			</dependency>
 
+			<!-- Bean validation API for overall-webapp (jersey provides the implementation) -->
 			<dependency>
 				<groupId>javax.validation</groupId>
 				<artifactId>validation-api</artifactId>
@@ -133,6 +135,7 @@
 				<version>2.23</version>
 			</dependency>
 
+			<!-- CDI for overall-webapp -->
 			<dependency>
 				<groupId>javax.enterprise</groupId>
 				<artifactId>cdi-api</artifactId>
@@ -162,13 +165,13 @@
 				<scope>test</scope>
 			</dependency>
 
-
+			<!-- Maven modules from this parent Maven project - modules can depend 
+				on each other -->
 			<dependency>
 				<groupId>com.pet.king</groupId>
 				<artifactId>overall-util</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.pet.king</groupId>
 				<artifactId>overall-common</artifactId>
