--- a/overall-app-container/overall-webapp/pom.xml
+++ b/overall-app-container/overall-webapp/pom.xml
@@ -90,6 +90,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
