--- a/overall-app-container/overall-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/overall-app-container/overall-webapp/src/main/webapp/WEB-INF/web.xml
@@ -27,4 +27,23 @@
 	<!-- <url-pattern>/api/*</url-pattern> -->
 	<!-- </servlet-mapping> -->
 
+	<!-- JAX-WS configuration -->
+<!-- 	<listener> -->
+<!-- 		<listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class> -->
+<!-- 	</listener> -->
+
+	<servlet>
+		<servlet-name>JAXWSServlet</servlet-name>
+		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>JAXWSServlet</servlet-name>
+		<!-- This matches the one defined in sun-jaxws.xml -->
+		<url-pattern>/personws</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+
 </web-app>
