--- a/overall-app-container/pom.xml
+++ b/overall-app-container/pom.xml
@@ -150,6 +150,13 @@
 				<scope>runtime</scope>
 			</dependency>
 
+			<!-- JAX-WS -->
+			<dependency>
+				<groupId>com.sun.xml.ws</groupId>
+				<artifactId>jaxws-rt</artifactId>
+				<version>2.2.10</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
