--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 #generated files
-overall-app-container/overall-app/target
-overall-app-container/overall-util/target
-webapp-stock/build/classes
+target/
+build/
+
+# IntelliJ
+.idea/
+*.iml
+
+# Eclipse
+.classpath
+.project
+.settings
