docker: renamed examples; docker-compose.yml: added ssh service, published container's port number 22 to host's 5022

--- a/docker_examples/web-python_redis/docker-compose.yml
+++ b/docker_examples/web-python_redis/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+  ssh:
+    image: danielguerra/alpine-sshd
+    ports:
+     - "5022:22"
   web:
     build: .
     ports:
