--- a/docker_examples/web-python_redis/Dockerfile
+++ b/docker_examples/web-python_redis/Dockerfile
@@ -1,5 +1,20 @@
-FROM python:3.4-alpine
-ADD . /code
-WORKDIR /code
+# Use an official Python runtime as a base image
+FROM python:2.7-slim
+
+# Copy the current directory contents into the container at /app
+ADD . /app
+
+# Set the working directory to /app
+WORKDIR /app
+
+# Install any needed packages specified in requirements.txt
 RUN pip install -r requirements.txt
+
+# Make port 80 available to the world outside this container
+EXPOSE 80
+
+# Define environment variable
+ENV NAME World
+
+# Run app.py when the container launches
 CMD ["python", "app.py"]
