--- a/docker_examples/web-python_redis/docker-compose.yml
+++ b/docker_examples/web-python_redis/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "3"
 services:
   ssh:
     image: danielguerra/alpine-sshd
@@ -7,8 +7,8 @@ services:
   web:
     build: .
     ports:
-     - "5000:5000"
+     - "5000:80"
     volumes:
-     - .:/code
+     - .:/app
   redis:
     image: "redis:alpine"
