java 9: multi gradle webshop project: intellij gradle import fix by specifying the path to the webshop-common project in the webshop-app project's settings.gradle

--- a/examples/java_9/webshop/webshop-app/settings.gradle
+++ b/examples/java_9/webshop/webshop-app/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'webshop-app'
 
-//include 'webshop-common'
+include 'webshop-common'
+project(':webshop-common').projectDir = new File(settingsDir, '../webshop-common/')
