--- a/examples/java_9/webshop/webshop-common/build.gradle
+++ b/examples/java_9/webshop/webshop-common/build.gradle
@@ -1,11 +1,11 @@
-group 'com.pet'
-version '1.0'
+plugins {
+	id 'java'
+}
 
 // module name used by gradle
 ext.moduleName = 'webshop-common'
 
-apply plugin: 'java'
-
+// necessary to be here, otherwise IntelliJ sets the java version used for the module back to 8
 sourceCompatibility = 9
 
 repositories {
