--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -3,6 +3,8 @@ buildscript {
 		kotlinVersion = '1.1.51'
 		springBootVersion = '2.0.0.M6'
 		kotlinCorouteVersion = '0.19.3'
+		swaggerVersion = '2.7.0'
+		exposedVersion = '0.8.7'
 	}
 	repositories {
 		mavenCentral()
@@ -42,8 +44,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-	compile('io.springfox:springfox-swagger2:2.7.0')
-	compile('io.springfox:springfox-swagger-ui:2.7.0')
+	compile("io.springfox:springfox-swagger2:${swaggerVersion}")
+	compile("io.springfox:springfox-swagger-ui:${swaggerVersion}")
+	//compile("org.jetbrains.exposed:exposed:${exposedVersion}")
+	//compile("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
 
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
