--- a/java_examples/kotlin/kotlin-practise/build.gradle
+++ b/java_examples/kotlin/kotlin-practise/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-	ext.kotlin_version = '1.1.51'
+	ext.kotlin_version = '1.2.0'
 
 	repositories {
 		mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
 }
 
 plugins {
-	id "org.jetbrains.kotlin.jvm" version '1.1.51'
+	id "org.jetbrains.kotlin.jvm" version '1.2.0'
 }
 
 apply plugin: 'kotlin'
@@ -31,7 +31,7 @@ dependencies {
 	compile 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor:0.19.3'
 	compile "org.jetbrains.kotlinx:kotlinx-coroutines-nio:0.19.3"
 	compile "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:0.19.3"
-	compile "org.jetbrains.kotlin:kotlin-reflect:1.1.51"
+	compile "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
 }
 
 compileKotlin {
