--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 	//compile("org.jetbrains.exposed:exposed:${exposedVersion}")
 	//compile("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
 
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
+	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCorouteVersion}")
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-reactive:${kotlinCorouteVersion}")
