--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -5,13 +5,11 @@ buildscript {
 		kotlinCorouteVersion = '0.22.5'
 		gradlewVersion = '4.7.0'
 		swaggerVersion = '2.8.0'
-		//exposedVersion = '0.10.2'
+		exposedVersion = '0.10.2'
 	}
 	ext['kotlin.version'] = kotlinVersion
 	repositories {
 		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -43,8 +41,7 @@ compileTestKotlin {
 
 repositories {
 	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://dl.bintray.com/kotlin/exposed/" }
 }
 
 
@@ -54,8 +51,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compile("io.springfox:springfox-swagger2:${swaggerVersion}")
 	compile("io.springfox:springfox-swagger-ui:${swaggerVersion}")
-	//compile("org.jetbrains.exposed:exposed:${exposedVersion}")
-	//compile("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
+	compile("org.jetbrains.exposed:exposed:${exposedVersion}")
+	compile("org.jetbrains.exposed:spring-transaction:${exposedVersion}")
 
 	compile("com.fasterxml.jackson.module:jackson-module-kotlin")
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
