--- a/java_examples/kotlin/webflux-thymeleaf/build.gradle
+++ b/java_examples/kotlin/webflux-thymeleaf/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.50'
-		springBootVersion = '2.0.2.RELEASE'
-		kotlinCorouteVersion = '0.22.5'
-		gradlewVersion = '4.7.0'
-		swaggerVersion = '2.8.0'
-		exposedVersion = '0.10.2'
+		kotlinVersion = '1.2.51'
+		springBootVersion = '2.0.4.RELEASE'
+		kotlinCorouteVersion = '0.24.0'
+		gradlewVersion = '4.9'
+		swaggerVersion = '2.9.2'
+		exposedVersion = '0.10.4'
 	}
 	ext['kotlin.version'] = kotlinVersion
 	repositories {
@@ -20,6 +20,7 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -63,6 +64,7 @@ dependencies {
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-nio:${kotlinCorouteVersion}")
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinCorouteVersion}")
 
+	kapt("org.springframework.boot:spring-boot-configuration-processor")
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
