--- a/java_examples/kotlin/PetApp/build.gradle
+++ b/java_examples/kotlin/PetApp/build.gradle
@@ -2,6 +2,7 @@ buildscript {
 	ext {
 		kotlinVersion = '1.2.51'
 		springBootVersion = '2.0.4.RELEASE'
+		appVersion = '1.0.0-SNAPSHOT'
 	}
 	repositories {
 		mavenCentral()
@@ -13,16 +14,16 @@ buildscript {
 	}
 }
 
-version '1.0-SNAPSHOT'
-
 // subprojects {
 allprojects {
 	apply plugin: 'kotlin'
 	apply plugin: 'kotlin-spring'
+	apply plugin: 'kotlin-kapt'
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
 
 	group 'hu.pet'
+	version = appVersion
 
 	repositories {
 		mavenCentral()
