PetApp: multi gradle project now actually works: had to disable "bootJar" task and enable the "jar" task on non-SpringBoot projects

--- a/java_examples/kotlin/PetApp/VNextSpringModule/build.gradle
+++ b/java_examples/kotlin/PetApp/VNextSpringModule/build.gradle
@@ -1,5 +1,7 @@
+jar.enabled = false
 bootJar {
-	baseName = 'Spring-Next-Module'
+	enabled = true
+	baseName = 'SpringNextModule'
 	exclude("application-dev.yml")
 	version = appVersion
 }
