--- a/java_examples/kotlin/PetApp/Common/Utils.Core/build.gradle
+++ b/java_examples/kotlin/PetApp/Common/Utils.Core/build.gradle
@@ -1,5 +1,3 @@
-version '1.1-SNAPSHOT'
-
-bootJar {
-	enabled = false
-}
+// Override the version for this particular project.
+// Otherwise version is inherited from the parent build.gradle file.
+version '1.1.0-SNAPSHOT'
